Migrate remaining classes to Jackson
Signed-off-by: Walter de Boer <walterdeboer@dbso.nl>